feat: support application-owned authorization
